<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.info_app.InfoAppFragment">

    <ScrollView
        android:id="@+id/main_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/general_padding">

            <TextView
                android:id="@+id/title_frg"
                style="@style/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_title" />

            <TextView
                android:id="@+id/subtitle_frg_info"
                style="@style/subTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/general_padding"
                android:text="@string/info_subTitle" />

            <TextView
                android:id="@+id/description_frg_ino"
                style="@style/normalTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info_desc" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>